--- a/client/app/templates/timezones/index.hbs
+++ b/client/app/templates/timezones/index.hbs
@@ -1,5 +1,4 @@
-<h1>Timezones list</h1>
-{{#each model as |timezon|}}
-  <p>timezone</p>
-{{/each}}
-{{outlet}}
+<ol>
+  <li>{{#link-to 'templates'}}Templates{{/link-to}}</li>
+</ol>
+{{timezone-list timezones=model}}
