timezone form component

--- a/client/app/templates/timezones/index.hbs
+++ b/client/app/templates/timezones/index.hbs
@@ -1,4 +1,4 @@
 <ol>
-  <li>{{#link-to 'templates'}}Templates{{/link-to}}</li>
+  <li>{{#link-to 'timezones'}}Timezones{{/link-to}}</li>
 </ol>
 {{timezone-list timezones=model}}
