remove timezone link

--- a/client/app/templates/components/timezone-list.hbs
+++ b/client/app/templates/components/timezone-list.hbs
@@ -12,7 +12,7 @@
         <td>
           {{#link-to 'timezones.timezone' timezone}}Show{{/link-to}}
           {{#link-to 'timezones.edit' timezone}}Edit{{/link-to}}
-          {{#link-to action 'timezones.edit' timezone}}Delete{{/link-to}}
+          <a href="#" {{action 'delete' timezone}}>Delete</a>
         </td>
       </tr>
     {{/each}}
