timezone show link

--- a/client/app/templates/timezones/timezone.hbs
+++ b/client/app/templates/timezones/timezone.hbs
@@ -2,4 +2,6 @@
 <dl>
   <dt><strong>City</strong></dt>
   <dd>{{model.city}}</dd>
+  <dt><strong>Difference</strong></dt>
+  <dd>{{model.difference}}</dd>
  </dl>
