--- a/client/app/templates/navbar.hbs
+++ b/client/app/templates/navbar.hbs
@@ -14,6 +14,12 @@
       <ul class="nav navbar-nav">
         {{#link-to 'timezones.new' tagName="li"}}<a href="">Add timezone</a>{{/link-to}}
       </ul>
+      {{#if session.isAuthenticated}}
+      {{else}}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/logout" {{action 'invalidateSession'}}>Logout</a></li>
+        </ul>
+      {{/if}}
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
