fixed specs to use json instead of json api

--- a/client/app/templates/components/user-list.hbs
+++ b/client/app/templates/components/user-list.hbs
@@ -10,6 +10,8 @@
         <td>{{user.email}}</td>
         <td>{{user.role}}</td>
         <td>
+          {{#link-to 'users.edit' user}}Edit{{/link-to}}
+          <a href="#" {{action 'delete' user}}>Delete</a>
         </td>
       </tr>
     {{/each}}
