--- a/client/app/templates/components/user-form.hbs
+++ b/client/app/templates/components/user-form.hbs
@@ -1,6 +1,6 @@
-<form {{action 'save' timezone on="submit"}}>
+<form {{action 'save' user on="submit"}}>
   {{input id=email value=user.email}}
-  {{input id=password value=user.password}}
+  {{input type=password id=password value=user.password}}
   <button type="submit">Save</button>
 </form>
 
