starting working on user create test

--- a/client/app/templates/components/user-form.hbs
+++ b/client/app/templates/components/user-form.hbs
@@ -1,6 +1,6 @@
 <form {{action 'save' user on="submit"}}>
-  {{input id=email value=user.email}}
-  {{input type=password id=password value=user.password}}
+  {{input id="email" value=user.email}}
+  {{input type="password" id="password" value=user.password}}
   <button type="submit">Save</button>
 </form>
 
