--- a/client/app/templates/components/user-list.hbs
+++ b/client/app/templates/components/user-list.hbs
@@ -4,12 +4,14 @@
     <th>Role</th>
     <th></th>
   </thead>
+  {{log users}}
   <tbody>
     {{#each users as |user|}}
       <tr>
         <td>{{user.email}}</td>
         <td>{{user.role}}</td>
         <td>
+          {{#link-to 'users.user' user}}Show{{/link-to}}
           {{#link-to 'users.edit' user}}Edit{{/link-to}}
           <a href="#" {{action 'delete' user}}>Delete</a>
         </td>
