--- a/client/app/templates/components/timezone-form.hbs
+++ b/client/app/templates/components/timezone-form.hbs
@@ -1,6 +1,17 @@
-<form {{action 'save' timezone on="submit"}}>
-  {{input value=timezone.name class="timezone-name"}}
-  {{input value=timezone.city class="timezone-city"}}
-  {{input value=timezone.difference class="timezone-difference"}}
-  <button type="submit">Save</button>
+<div class="well col-sm-4 col-sm-offset-4">
+<form class="form" {{action 'save' timezone on="submit"}}>
+  <div class="form-group">
+    <label for="name">Name</label>
+    {{input id="name" value=timezone.name class="form-control"}}
+  </div>
+  <div class="form-group">
+    <label for="city">City</label>
+    {{input id="city" value=timezone.city class="form-control"}}
+  </div>
+  <div class="form-group">
+    <label for="difference">Time lapse (GMT)</label>
+    {{input id="difference" value=timezone.difference type="number" min="-12" max="12" class="form-control"}}
+  </div>
+  <button type="submit" class="btn btn-primary">Save</button>
 </form>
+</div>
