removed extra files

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,4 +1,6 @@
-{{partial 'navbar'}}
+{{#if session.isAuthenticated}}
+  {{partial 'navbar'}}
+{{/if}}
 <div class="container-fluid">
   {{outlet}}
 </div>
