--- a/client/app/templates/navbar.hbs
+++ b/client/app/templates/navbar.hbs
@@ -1,3 +1,4 @@
+{{log session.currentUser}}
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -13,12 +14,13 @@
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
         {{#link-to 'timezones.new' tagName="li"}}<a href="">Add timezone</a>{{/link-to}}
-        {{#link-to 'users' tagName="li"}}<a href="">Users</a>{{/link-to}}
+        {{#if session.currentUser.isAdmin}}
+          {{#link-to 'users' tagName="li"}}<a href="">Users</a>{{/link-to}}
+        {{/if}}
       </ul>
       {{#if session.isAuthenticated}}
-      {{else}}
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout" {{action 'invalidateSession'}}>Logout</a></li>
+          <li><a href="/logout" {{action 'invalidateSession'}}>Logout {{session.currentUser.email}}</a></li>
         </ul>
       {{/if}}
     </div><!-- /.navbar-collapse -->
