--- a/client/app/templates/components/user-form.hbs
+++ b/client/app/templates/components/user-form.hbs
@@ -1,6 +1,13 @@
-<form {{action 'save' user on="submit"}}>
-  {{input id="email" value=user.email}}
-  {{input type="password" id="password" value=user.password}}
-  <button type="submit">Save</button>
-</form>
-
+<div class="well col-sm-4 col-sm-offset-4">
+  <form {{action 'save' user on="submit"}}>
+    <div class="form-group">
+      <label for="name">Name</label>
+      {{input id="email" value=user.email class="form-control"}}
+    </div>
+    <div class="form-group">
+      <label for="name">Name</label>
+      {{input type="password" id="password" value=user.password class="form-control"}}
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+  </form>
+</div>
