--- a/client/app/templates/navbar.hbs
+++ b/client/app/templates/navbar.hbs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' class="navbar-brand"}}Timezones{{/link-to}}
+      {{#link-to 'timezones' class="navbar-brand"}}Timezones{{/link-to}}
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
