--- a/client/app/templates/timezones/index.hbs
+++ b/client/app/templates/timezones/index.hbs
@@ -1,4 +1,2 @@
-<ol>
-  <li>{{#link-to 'timezones'}}Timezones{{/link-to}}</li>
-</ol>
+{{#link-to 'timezones.new' class="btn btn-default"}}Add{{/link-to}}
 {{timezone-list timezones=model}}
