--- a/client/app/templates/components/user-form.hbs
+++ b/client/app/templates/components/user-form.hbs
@@ -3,6 +3,11 @@
     <div class="form-group">
       <label for="name">Name</label>
       {{input id="email" value=user.email class="form-control"}}
+      {{#each user.errors.email as |error|}}
+        <div class="error">
+          {{error.message}}
+        </div>
+      {{/each}}
     </div>
     <div class="form-group">
       <label for="name">Name</label>
