--- a/client/app/templates/components/user-form.hbs
+++ b/client/app/templates/components/user-form.hbs
@@ -12,6 +12,11 @@
     <div class="form-group">
       <label for="name">Name</label>
       {{input type="password" id="password" value=user.password class="form-control"}}
+      {{#each user.errors.password as |error|}}
+        <div class="error">
+          {{error.message}}
+        </div>
+      {{/each}}
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
   </form>
