--- a/client/app/templates/components/timezone-list.hbs
+++ b/client/app/templates/components/timezone-list.hbs
@@ -15,10 +15,16 @@
         {{#if session.currentUser.isManager}}
           <td>user{{timezone.user.email}}</td>
         {{/if}}
-        <td>
-          {{#link-to 'timezones.timezone' timezone}}Show{{/link-to}}
-          {{#link-to 'timezones.edit' timezone}}Edit{{/link-to}}
-          <a href="#" {{action 'delete' timezone}}>Delete</a>
+        <td class="actions">
+          {{#link-to 'timezones.timezone' timezone}}
+            <span class="glyphicon glyphicon-eye-open"></span>
+          {{/link-to}}
+          {{#link-to 'timezones.edit' timezone}}
+            <span class="glyphicon glyphicon-pencil"></span>
+          {{/link-to}}
+          <a href="#" {{action 'delete' timezone}}>
+            <span class="glyphicon glyphicon-trash"></span>
+          </a>
         </td>
       </tr>
     {{/each}}
