--- a/client/app/templates/timezones/index.hbs
+++ b/client/app/templates/timezones/index.hbs
@@ -1,2 +1,6 @@
-{{#link-to 'timezones.new' class="btn btn-default"}}Add{{/link-to}}
+<div class="panel panel-default">
+  <div class="panel-body">
+  {{#link-to 'timezones.new' class="btn btn-default"}}Add{{/link-to}}
+  </div>
+</div>
 {{timezone-list timezones=model}}
