create timezone test

--- a/client/app/templates/timezones/index.hbs
+++ b/client/app/templates/timezones/index.hbs
@@ -1,6 +1,4 @@
-<div class="panel panel-default">
-  <div class="panel-body">
+{{#bs-panel}}
   {{#link-to 'timezones.new' class="btn btn-default"}}Add{{/link-to}}
-  </div>
-</div>
+{{/bs-panel}}
 {{timezone-list timezones=model}}
