--- a/client/app/templates/components/user-list.hbs
+++ b/client/app/templates/components/user-list.hbs
@@ -12,13 +12,13 @@
         <td>{{user.role}}</td>
         <td class="actions">
           {{#link-to 'users.user' user}}
-            <span class="glyphicon glyphicon-eye-open"></span>
+            <span class="glyphicon glyphicon-eye-open view"></span>
           {{/link-to}}
           {{#link-to 'users.edit' user}}
-            <span class="glyphicon glyphicon-pencil"></span>
+            <span class="glyphicon glyphicon-pencil edit"></span>
           {{/link-to}}
           <a href="#" {{action 'delete' user}}>
-            <span class="glyphicon glyphicon-trash"></span>
+            <span class="glyphicon glyphicon-trash delete"></span>
           </a>
         </td>
       </tr>
